--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -86,3 +86,22 @@
     font-size: 1rem; 
   }
 }
+
+/* navbar avatar editing */
+
+.user-avatar {
+  width: 35px; 
+  height: 35px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-light); 
+}
+
+.navbar-avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
